{
    "name": "InputBase",
    "maps": [
        {
            "name": "Character",
            "id": "8585f5f2-2ede-4b83-9c3e-771b6d26d9f4",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "b9a8f689-a5cc-469d-8f7a-e922dd0668cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "42e2c84c-ff3b-4f7a-bc0c-a77575addd23",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "befbf6cf-b8a8-4710-840a-2848c9d2ce68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "40e63a1c-ed44-4c8b-acca-391f64f94046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "Button",
                    "id": "0b6d85d0-1fd8-4648-b3a7-a80fccaeeb5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "5094642e-8659-4f41-8d75-74e00173bad2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "7f58c908-f679-4cb4-a5c7-2dc4e51fc2d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8f171aa-d02a-4aba-afad-91ccbb45aa83",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "272f6165-3476-48f7-95fe-5a974b6cb8e1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "71a2a67e-cccf-4055-add3-6665df6f6212",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bafb0cf0-cc20-48b9-b497-14d5a6b2e931",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2af40ccd-eef5-48e6-9615-c810997a05f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "05051609-9003-47b8-88a9-07fce0bbc36a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "578f1bfd-10ca-4d93-8497-97d46c7fe295",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f1bf1cee-56fd-4fd9-821b-36979b014b28",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1a5c1c70-74d6-4c43-a0ec-54ce7fe6e922",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "da581f66-415c-4a22-b4ea-48a2ecff0ac7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "190e70a2-cc7b-44e5-bd37-d0e37884a31a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c7dcbc06-f6d3-43ca-b600-79dcac440ab1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f7acb2-c2a0-4aca-af64-3ce5826203d0",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a30ce8c7-0ce2-45e2-9b4a-27a3b14b6b66",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da219c09-8c43-4717-8c71-5097641dfbd8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72f7df83-ac66-4bdd-9574-9816b04b2c4c",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "f054b914-7577-45ed-b3ab-12df381ebf42",
            "actions": [
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "ba7d127e-3e57-4e1a-a25d-2c7d0dfb9eb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun1",
                    "type": "Button",
                    "id": "54bdc69c-e31e-4bd6-b295-d57feda3a4ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun2",
                    "type": "Button",
                    "id": "3aad5a5a-e1a5-4ebd-ba52-2fdc076dc693",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun3",
                    "type": "Button",
                    "id": "c993cac1-6850-47e3-a45c-d9b185407701",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGrenade",
                    "type": "Button",
                    "id": "c520c7ca-32b4-40f4-a0c3-b39993761a9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUpWeapon",
                    "type": "Button",
                    "id": "7a7f9f85-04c5-4a87-b9af-fc9e18019d95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropWeapon",
                    "type": "Button",
                    "id": "49fdc05a-bedf-4eb6-ac78-5a2e732552ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeFireMode",
                    "type": "Button",
                    "id": "c0dc7251-d509-481a-97a9-67953d9a86af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReloadBullet",
                    "type": "Button",
                    "id": "b23cecfc-6330-4899-8389-4a7a548ff631",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4400698-ed12-45b2-ba03-dcab835845e9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "684a75e3-f705-4c7f-a1ac-6f32abdd90b6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d193dc8-f862-4666-a46c-d072af8d321e",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGrenade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d6054f0-c876-4736-939e-83210970e7ce",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbaa7363-3a5b-4fb6-abfc-89f97c4c28dd",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4f902be-7d86-4e9d-a135-7402233b3609",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeFireMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c7cbbb7-a522-4c02-bb30-e4887fc8b57c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e44091b1-2895-4983-8a6c-a87e8a5be713",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19b4492e-4f6a-47d3-a613-0838e7c77dbc",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}